@@ -120,7 +120,6 @@
                     <forkMode>always</forkMode>
                     <systemPropertyVariables>
                         <maven.repo.local>${settings.localRepository}</maven.repo.local>
-                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         <jboss.home>${jboss.home}</jboss.home>
                     </systemPropertyVariables>
                     <environmentVariables>
@@ -138,7 +137,7 @@
                 <jdk>[9,)</jdk>
             </activation>
             <properties>
-                <modular.jdk.args>--add-modules=java.se</modular.jdk.args>
+                <modular.jdk.args>--add-modules=java.se --add-opens=java.base/java.util=ALL-UNNAMED</modular.jdk.args>
             </properties>
         </profile>
     </profiles>
